--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Web Beto</title>
+</head>	
+		<body>
+			<h1>Test of Beto successfull2</h1>
+			<h2>Sub Title2</h2>
+			<p>Information parrafo</p>
+		</body>	
+</html>
