--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +8,7 @@
 </head>	
 		<body>
 			<h1>Test of Beto successfull3</h1>
-			<h2>Sub Title3</h2>
-			<p>Information parrafo</p>
-		</body>	
+			<h2>This is a great course!</h2>
+			<p>LO LOGRÉ!</p> 
+		</body>
 </html>
