--- a/Modulo2_Solution/index.html
+++ b/Modulo2_Solution/index.html
@@ -17,7 +17,7 @@
 
 		<div class="col-lg-4 col-md-6">
 			
-			<div id="box1"><div id="S1">PIC</div>PIC (usually pronounced as "pick") is a family of microcontrollers made by Microchip Technology, derived from the PIC1650 originally developed by General Instrument's Microelectronics Division. (Taken from: https://en.wikipedia.org/wiki/PIC).</div>
+			<div id="box1"><div id="S1">PIC</div>PIC (usually pronounced as "pick") is a family of microcontrollers made by Microchip Technology, derived from the PIC1650 originally developed by General Instrument's Microelectronics Division.. (Taken from: https://en.wikipedia.org/wiki/PIC).</div>
 		</div>
 
 		<div class="col-lg-4 col-md-6">
