--- a/Modulo3_Solution/index.html
+++ b/Modulo3_Solution/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-	<nav class="navbar navbar-expand-sm bg-body-tertiary">
+	<nav class="navbar navbar-expand-md bg-body-tertiary"> <!--El botn se expande cuando el screen es inferior a md-->
   <div class="container-fluid">
     <a class="navbar-brand" href="#"> <h1>Food, LLC</h1>  </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
   </div>
 </nav>
 
-<div> <h2  class="text-center">Our Menu</h2> </div>
+<div> <h2 		class="text-center">Our Menu</h2> </div>
 
 <div class="container-xxl"> <!--Bootstrap permite ocupar el 100% del screen hasta alcanzar el breakpoint xxl. Se agrega un padding left y right (y padding button) del mismo ancho de separación que trae bootstrap (margin) entre columnas. Con esto último se logra una distribución simétrica entre columnas y el body-->
 	<div class="row">
